round8/CTLmodelchecker/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> spec
Rule 1     spec -> statement
Rule 2     spec -> statement spec
Rule 3     statement -> ID EQ NUMBER SEMICOLON
Rule 4     statement -> TYPE ID EQ setexpr SEMICOLON
Rule 5     statement -> SOURCE initlist SEMICOLON
Rule 6     statement -> SOURCEFORMULA boolexpr SEMICOLON
Rule 7     statement -> CTLTARGET CTLformula SEMICOLON
Rule 8     setexpr -> LBRACK tnumexpr COMMA tnumexpr RBRACK
Rule 9     setexpr -> LBRACE stringlist RBRACE
Rule 10    setexpr -> ID
Rule 11    stringlist -> enum
Rule 12    enum -> ID
Rule 13    enum -> NUMBER
Rule 14    stringlist -> enum COMMA stringlist
Rule 15    boolexpr -> boolexpr AND boolexpr
Rule 16    boolexpr -> boolexpr OR boolexpr
Rule 17    boolexpr -> boolexpr IMPL boolexpr
Rule 18    boolexpr -> boolexpr EQVI boolexpr
Rule 19    boolexpr -> NOT boolexpr
Rule 20    boolexpr -> PTRUE
Rule 21    boolexpr -> PFALSE
Rule 22    boolexpr -> EXISTS LPAREN paramlist RPAREN boolexpr
Rule 23    boolexpr -> FORALL LPAREN paramlist RPAREN boolexpr
Rule 24    boolexprlist -> boolexpr
Rule 25    boolexprlist -> boolexpr COMMA boolexprlist
Rule 26    boolexpr -> atom
Rule 27    boolexpr -> atom AT NUMBER
Rule 28    boolexpr -> LPAREN boolexpr RPAREN
Rule 29    boolexpr -> LBRACK numexpr GT numexpr RBRACK
Rule 30    boolexpr -> LBRACK numexpr LT numexpr RBRACK
Rule 31    boolexpr -> LBRACK numexpr GEQ numexpr RBRACK
Rule 32    boolexpr -> LBRACK numexpr LEQ numexpr RBRACK
Rule 33    boolexpr -> LBRACK numexpr EQ numexpr RBRACK
Rule 34    CTLformula -> CTLformula AND CTLformula
Rule 35    CTLformula -> CTLformula OR CTLformula
Rule 36    CTLformula -> CTLformula IMPL CTLformula
Rule 37    CTLformula -> CTLformula EQVI CTLformula
Rule 38    CTLformula -> PTRUE
Rule 39    CTLformula -> PFALSE
Rule 40    CTLformula -> NOT CTLformula
Rule 41    CTLformula -> atom
Rule 42    CTLformula -> LPAREN CTLformula RPAREN
Rule 43    CTLformula -> EX CTLformula
Rule 44    CTLformula -> EG CTLformula
Rule 45    CTLformula -> E LBRACK CTLformula U CTLformula RBRACK
Rule 46    CTLformula -> EF CTLformula
Rule 47    CTLformula -> AX CTLformula
Rule 48    CTLformula -> AG CTLformula
Rule 49    CTLformula -> A LBRACK CTLformula U CTLformula RBRACK
Rule 50    CTLformula -> AF CTLformula
Rule 51    numexpr -> LPAREN numexpr RPAREN
Rule 52    numexpr -> NUMBER
Rule 53    numexpr -> atom
Rule 54    numexpr -> numexpr PLUS numexpr
Rule 55    numexpr -> numexpr MINUS numexpr
Rule 56    numexpr -> numexpr TIMES numexpr
Rule 57    tnumexpr -> LPAREN numexpr RPAREN
Rule 58    tnumexpr -> NUMBER
Rule 59    tnumexpr -> ID
Rule 60    tnumexpr -> tnumexpr PLUS tnumexpr
Rule 61    tnumexpr -> tnumexpr MINUS tnumexpr
Rule 62    tnumexpr -> tnumexpr TIMES tnumexpr
Rule 63    termlist -> term COMMA termlist
Rule 64    termlist -> term
Rule 65    term -> tnumexpr
Rule 66    atom -> ID
Rule 67    atom -> ID LPAREN termlist RPAREN
Rule 68    initlist -> atom
Rule 69    initlist -> atom COMMA initlist
Rule 70    initlist -> atom EQ NUMBER
Rule 71    initlist -> atom EQ NUMBER COMMA initlist
Rule 72    effects -> effect
Rule 73    effects -> effect effects
Rule 74    effect -> atom SEMICOLON
Rule 75    effect -> NOT atom SEMICOLON
Rule 76    effect -> atom ASSIGN numexpr SEMICOLON
Rule 77    effect -> IF boolexpr LBRACE effects RBRACE
Rule 78    effect -> FORALL LPAREN paramlist RPAREN LBRACE effects RBRACE
Rule 79    paramlist -> param
Rule 80    paramlist -> param COMMA paramlist
Rule 81    param -> ID COLON setexpr
Rule 82    statement -> TRANSITION ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
Rule 83    statement -> TRANSITION ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

Terminals, with rules where they appear

A                    : 49
AF                   : 50
AG                   : 48
AND                  : 15 34
ASSIGN               : 76
AT                   : 27
AX                   : 47
COLON                : 81
COMMA                : 8 14 25 63 69 71 80
CTLTARGET            : 7
E                    : 45
EF                   : 46
EG                   : 44
EQ                   : 3 4 33 70 71
EQVI                 : 18 37
EX                   : 43
EXISTS               : 22
FORALL               : 23 78
GEQ                  : 31
GT                   : 29
ID                   : 3 4 10 12 59 66 67 81 82 83
IF                   : 77
IMPL                 : 17 36
LBRACE               : 9 77 78 82 83
LBRACK               : 8 29 30 31 32 33 45 49
LEQ                  : 32
LPAREN               : 22 23 28 42 51 57 67 78 82 83
LT                   : 30
MINUS                : 55 61
NOT                  : 19 40 75
NUMBER               : 3 13 27 52 58 70 71
OR                   : 16 35
PFALSE               : 21 39
PLUS                 : 54 60
PTRUE                : 20 38
RBRACE               : 9 77 78 82 83
RBRACK               : 8 29 30 31 32 33 45 49
RPAREN               : 22 23 28 42 51 57 67 78 82 83
SEMICOLON            : 3 4 5 6 7 74 75 76
SOURCE               : 5
SOURCEFORMULA        : 6
TIMES                : 56 62
TRANSITION           : 82 83
TYPE                 : 4
U                    : 45 49
error                : 

Nonterminals, with rules where they appear

CTLformula           : 7 34 34 35 35 36 36 37 37 40 42 43 44 45 45 46 47 48 49 49 50
atom                 : 26 27 41 53 68 69 70 71 74 75 76
boolexpr             : 6 15 15 16 16 17 17 18 18 19 22 23 24 25 28 77 82 83
boolexprlist         : 25
effect               : 72 73
effects              : 73 77 78 82 83
enum                 : 11 14
initlist             : 5 69 71
numexpr              : 29 29 30 30 31 31 32 32 33 33 51 54 54 55 55 56 56 57 76
param                : 79 80
paramlist            : 22 23 78 80 82
setexpr              : 4 81
spec                 : 2 0
statement            : 1 2
stringlist           : 9 14
term                 : 63 64
termlist             : 63 67
tnumexpr             : 8 8 60 60 61 61 62 62 65

Parsing method: LALR

state 0

    (0) S' -> . spec
    (1) spec -> . statement
    (2) spec -> . statement spec
    (3) statement -> . ID EQ NUMBER SEMICOLON
    (4) statement -> . TYPE ID EQ setexpr SEMICOLON
    (5) statement -> . SOURCE initlist SEMICOLON
    (6) statement -> . SOURCEFORMULA boolexpr SEMICOLON
    (7) statement -> . CTLTARGET CTLformula SEMICOLON
    (82) statement -> . TRANSITION ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (83) statement -> . TRANSITION ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

    ID              shift and go to state 3
    TYPE            shift and go to state 4
    SOURCE          shift and go to state 5
    SOURCEFORMULA   shift and go to state 6
    CTLTARGET       shift and go to state 7
    TRANSITION      shift and go to state 8

    spec                           shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> spec .



state 2

    (1) spec -> statement .
    (2) spec -> statement . spec
    (1) spec -> . statement
    (2) spec -> . statement spec
    (3) statement -> . ID EQ NUMBER SEMICOLON
    (4) statement -> . TYPE ID EQ setexpr SEMICOLON
    (5) statement -> . SOURCE initlist SEMICOLON
    (6) statement -> . SOURCEFORMULA boolexpr SEMICOLON
    (7) statement -> . CTLTARGET CTLformula SEMICOLON
    (82) statement -> . TRANSITION ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (83) statement -> . TRANSITION ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

    $end            reduce using rule 1 (spec -> statement .)
    ID              shift and go to state 3
    TYPE            shift and go to state 4
    SOURCE          shift and go to state 5
    SOURCEFORMULA   shift and go to state 6
    CTLTARGET       shift and go to state 7
    TRANSITION      shift and go to state 8

    statement                      shift and go to state 2
    spec                           shift and go to state 9

state 3

    (3) statement -> ID . EQ NUMBER SEMICOLON

    EQ              shift and go to state 10


state 4

    (4) statement -> TYPE . ID EQ setexpr SEMICOLON

    ID              shift and go to state 11


state 5

    (5) statement -> SOURCE . initlist SEMICOLON
    (68) initlist -> . atom
    (69) initlist -> . atom COMMA initlist
    (70) initlist -> . atom EQ NUMBER
    (71) initlist -> . atom EQ NUMBER COMMA initlist
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    ID              shift and go to state 14

    initlist                       shift and go to state 12
    atom                           shift and go to state 13

state 6

    (6) statement -> SOURCEFORMULA . boolexpr SEMICOLON
    (15) boolexpr -> . boolexpr AND boolexpr
    (16) boolexpr -> . boolexpr OR boolexpr
    (17) boolexpr -> . boolexpr IMPL boolexpr
    (18) boolexpr -> . boolexpr EQVI boolexpr
    (19) boolexpr -> . NOT boolexpr
    (20) boolexpr -> . PTRUE
    (21) boolexpr -> . PFALSE
    (22) boolexpr -> . EXISTS LPAREN paramlist RPAREN boolexpr
    (23) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (26) boolexpr -> . atom
    (27) boolexpr -> . atom AT NUMBER
    (28) boolexpr -> . LPAREN boolexpr RPAREN
    (29) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (30) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (31) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (32) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (33) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 16
    PTRUE           shift and go to state 17
    PFALSE          shift and go to state 18
    EXISTS          shift and go to state 19
    FORALL          shift and go to state 21
    LPAREN          shift and go to state 20
    LBRACK          shift and go to state 23
    ID              shift and go to state 14

    boolexpr                       shift and go to state 15
    atom                           shift and go to state 22

state 7

    (7) statement -> CTLTARGET . CTLformula SEMICOLON
    (34) CTLformula -> . CTLformula AND CTLformula
    (35) CTLformula -> . CTLformula OR CTLformula
    (36) CTLformula -> . CTLformula IMPL CTLformula
    (37) CTLformula -> . CTLformula EQVI CTLformula
    (38) CTLformula -> . PTRUE
    (39) CTLformula -> . PFALSE
    (40) CTLformula -> . NOT CTLformula
    (41) CTLformula -> . atom
    (42) CTLformula -> . LPAREN CTLformula RPAREN
    (43) CTLformula -> . EX CTLformula
    (44) CTLformula -> . EG CTLformula
    (45) CTLformula -> . E LBRACK CTLformula U CTLformula RBRACK
    (46) CTLformula -> . EF CTLformula
    (47) CTLformula -> . AX CTLformula
    (48) CTLformula -> . AG CTLformula
    (49) CTLformula -> . A LBRACK CTLformula U CTLformula RBRACK
    (50) CTLformula -> . AF CTLformula
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    PTRUE           shift and go to state 25
    PFALSE          shift and go to state 26
    NOT             shift and go to state 27
    LPAREN          shift and go to state 29
    EX              shift and go to state 30
    EG              shift and go to state 31
    E               shift and go to state 32
    EF              shift and go to state 33
    AX              shift and go to state 34
    AG              shift and go to state 35
    A               shift and go to state 36
    AF              shift and go to state 37
    ID              shift and go to state 14

    CTLformula                     shift and go to state 24
    atom                           shift and go to state 28

state 8

    (82) statement -> TRANSITION . ID LPAREN paramlist RPAREN boolexpr LBRACE effects RBRACE
    (83) statement -> TRANSITION . ID LPAREN RPAREN boolexpr LBRACE effects RBRACE

    ID              shift and go to state 38


state 9

    (2) spec -> statement spec .

    $end            reduce using rule 2 (spec -> statement spec .)


state 10

    (3) statement -> ID EQ . NUMBER SEMICOLON

    NUMBER          shift and go to state 39


state 11

    (4) statement -> TYPE ID . EQ setexpr SEMICOLON

    EQ              shift and go to state 40


state 12

    (5) statement -> SOURCE initlist . SEMICOLON

    SEMICOLON       shift and go to state 41


state 13

    (68) initlist -> atom .
    (69) initlist -> atom . COMMA initlist
    (70) initlist -> atom . EQ NUMBER
    (71) initlist -> atom . EQ NUMBER COMMA initlist

    SEMICOLON       reduce using rule 68 (initlist -> atom .)
    COMMA           shift and go to state 42
    EQ              shift and go to state 43


state 14

    (66) atom -> ID .
    (67) atom -> ID . LPAREN termlist RPAREN

    COMMA           reduce using rule 66 (atom -> ID .)
    EQ              reduce using rule 66 (atom -> ID .)
    SEMICOLON       reduce using rule 66 (atom -> ID .)
    AT              reduce using rule 66 (atom -> ID .)
    AND             reduce using rule 66 (atom -> ID .)
    OR              reduce using rule 66 (atom -> ID .)
    IMPL            reduce using rule 66 (atom -> ID .)
    EQVI            reduce using rule 66 (atom -> ID .)
    RPAREN          reduce using rule 66 (atom -> ID .)
    LBRACE          reduce using rule 66 (atom -> ID .)
    GT              reduce using rule 66 (atom -> ID .)
    LT              reduce using rule 66 (atom -> ID .)
    GEQ             reduce using rule 66 (atom -> ID .)
    LEQ             reduce using rule 66 (atom -> ID .)
    PLUS            reduce using rule 66 (atom -> ID .)
    MINUS           reduce using rule 66 (atom -> ID .)
    TIMES           reduce using rule 66 (atom -> ID .)
    U               reduce using rule 66 (atom -> ID .)
    RBRACK          reduce using rule 66 (atom -> ID .)
    ASSIGN          reduce using rule 66 (atom -> ID .)
    LPAREN          shift and go to state 44


state 15

    (6) statement -> SOURCEFORMULA boolexpr . SEMICOLON
    (15) boolexpr -> boolexpr . AND boolexpr
    (16) boolexpr -> boolexpr . OR boolexpr
    (17) boolexpr -> boolexpr . IMPL boolexpr
    (18) boolexpr -> boolexpr . EQVI boolexpr

    SEMICOLON       shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    IMPL            shift and go to state 48
    EQVI            shift and go to state 49


state 16

    (19) boolexpr -> NOT . boolexpr
    (15) boolexpr -> . boolexpr AND boolexpr
    (16) boolexpr -> . boolexpr OR boolexpr
    (17) boolexpr -> . boolexpr IMPL boolexpr
    (18) boolexpr -> . boolexpr EQVI boolexpr
    (19) boolexpr -> . NOT boolexpr
    (20) boolexpr -> . PTRUE
    (21) boolexpr -> . PFALSE
    (22) boolexpr -> . EXISTS LPAREN paramlist RPAREN boolexpr
    (23) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (26) boolexpr -> . atom
    (27) boolexpr -> . atom AT NUMBER
    (28) boolexpr -> . LPAREN boolexpr RPAREN
    (29) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (30) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (31) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (32) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (33) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 16
    PTRUE           shift and go to state 17
    PFALSE          shift and go to state 18
    EXISTS          shift and go to state 19
    FORALL          shift and go to state 21
    LPAREN          shift and go to state 20
    LBRACK          shift and go to state 23
    ID              shift and go to state 14

    boolexpr                       shift and go to state 50
    atom                           shift and go to state 22

state 17

    (20) boolexpr -> PTRUE .

    SEMICOLON       reduce using rule 20 (boolexpr -> PTRUE .)
    AND             reduce using rule 20 (boolexpr -> PTRUE .)
    OR              reduce using rule 20 (boolexpr -> PTRUE .)
    IMPL            reduce using rule 20 (boolexpr -> PTRUE .)
    EQVI            reduce using rule 20 (boolexpr -> PTRUE .)
    RPAREN          reduce using rule 20 (boolexpr -> PTRUE .)
    LBRACE          reduce using rule 20 (boolexpr -> PTRUE .)


state 18

    (21) boolexpr -> PFALSE .

    SEMICOLON       reduce using rule 21 (boolexpr -> PFALSE .)
    AND             reduce using rule 21 (boolexpr -> PFALSE .)
    OR              reduce using rule 21 (boolexpr -> PFALSE .)
    IMPL            reduce using rule 21 (boolexpr -> PFALSE .)
    EQVI            reduce using rule 21 (boolexpr -> PFALSE .)
    RPAREN          reduce using rule 21 (boolexpr -> PFALSE .)
    LBRACE          reduce using rule 21 (boolexpr -> PFALSE .)


state 19

    (22) boolexpr -> EXISTS . LPAREN paramlist RPAREN boolexpr

    LPAREN          shift and go to state 51


state 20

    (28) boolexpr -> LPAREN . boolexpr RPAREN
    (15) boolexpr -> . boolexpr AND boolexpr
    (16) boolexpr -> . boolexpr OR boolexpr
    (17) boolexpr -> . boolexpr IMPL boolexpr
    (18) boolexpr -> . boolexpr EQVI boolexpr
    (19) boolexpr -> . NOT boolexpr
    (20) boolexpr -> . PTRUE
    (21) boolexpr -> . PFALSE
    (22) boolexpr -> . EXISTS LPAREN paramlist RPAREN boolexpr
    (23) boolexpr -> . FORALL LPAREN paramlist RPAREN boolexpr
    (26) boolexpr -> . atom
    (27) boolexpr -> . atom AT NUMBER
    (28) boolexpr -> . LPAREN boolexpr RPAREN
    (29) boolexpr -> . LBRACK numexpr GT numexpr RBRACK
    (30) boolexpr -> . LBRACK numexpr LT numexpr RBRACK
    (31) boolexpr -> . LBRACK numexpr GEQ numexpr RBRACK
    (32) boolexpr -> . LBRACK numexpr LEQ numexpr RBRACK
    (33) boolexpr -> . LBRACK numexpr EQ numexpr RBRACK
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    NOT             shift and go to state 16
    PTRUE           shift and go to state 17
    PFALSE          shift and go to state 18
    EXISTS          shift and go to state 19
    FORALL          shift and go to state 21
    LPAREN          shift and go to state 20
    LBRACK          shift and go to state 23
    ID              shift and go to state 14

    boolexpr                       shift and go to state 52
    atom                           shift and go to state 22

state 21

    (23) boolexpr -> FORALL . LPAREN paramlist RPAREN boolexpr

    LPAREN          shift and go to state 53


state 22

    (26) boolexpr -> atom .
    (27) boolexpr -> atom . AT NUMBER

    SEMICOLON       reduce using rule 26 (boolexpr -> atom .)
    AND             reduce using rule 26 (boolexpr -> atom .)
    OR              reduce using rule 26 (boolexpr -> atom .)
    IMPL            reduce using rule 26 (boolexpr -> atom .)
    EQVI            reduce using rule 26 (boolexpr -> atom .)
    RPAREN          reduce using rule 26 (boolexpr -> atom .)
    LBRACE          reduce using rule 26 (boolexpr -> atom .)
    AT              shift and go to state 54


state 23

    (29) boolexpr -> LBRACK . numexpr GT numexpr RBRACK
    (30) boolexpr -> LBRACK . numexpr LT numexpr RBRACK
    (31) boolexpr -> LBRACK . numexpr GEQ numexpr RBRACK
    (32) boolexpr -> LBRACK . numexpr LEQ numexpr RBRACK
    (33) boolexpr -> LBRACK . numexpr EQ numexpr RBRACK
    (51) numexpr -> . LPAREN numexpr RPAREN
    (52) numexpr -> . NUMBER
    (53) numexpr -> . atom
    (54) numexpr -> . numexpr PLUS numexpr
    (55) numexpr -> . numexpr MINUS numexpr
    (56) numexpr -> . numexpr TIMES numexpr
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    LPAREN          shift and go to state 56
    NUMBER          shift and go to state 57
    ID              shift and go to state 14

    numexpr                        shift and go to state 55
    atom                           shift and go to state 58

state 24

    (7) statement -> CTLTARGET CTLformula . SEMICOLON
    (34) CTLformula -> CTLformula . AND CTLformula
    (35) CTLformula -> CTLformula . OR CTLformula
    (36) CTLformula -> CTLformula . IMPL CTLformula
    (37) CTLformula -> CTLformula . EQVI CTLformula

    SEMICOLON       shift and go to state 59
    AND             shift and go to state 60
    OR              shift and go to state 61
    IMPL            shift and go to state 62
    EQVI            shift and go to state 63


state 25

    (38) CTLformula -> PTRUE .

    SEMICOLON       reduce using rule 38 (CTLformula -> PTRUE .)
    AND             reduce using rule 38 (CTLformula -> PTRUE .)
    OR              reduce using rule 38 (CTLformula -> PTRUE .)
    IMPL            reduce using rule 38 (CTLformula -> PTRUE .)
    EQVI            reduce using rule 38 (CTLformula -> PTRUE .)
    RPAREN          reduce using rule 38 (CTLformula -> PTRUE .)
    U               reduce using rule 38 (CTLformula -> PTRUE .)
    RBRACK          reduce using rule 38 (CTLformula -> PTRUE .)


state 26

    (39) CTLformula -> PFALSE .

    SEMICOLON       reduce using rule 39 (CTLformula -> PFALSE .)
    AND             reduce using rule 39 (CTLformula -> PFALSE .)
    OR              reduce using rule 39 (CTLformula -> PFALSE .)
    IMPL            reduce using rule 39 (CTLformula -> PFALSE .)
    EQVI            reduce using rule 39 (CTLformula -> PFALSE .)
    RPAREN          reduce using rule 39 (CTLformula -> PFALSE .)
    U               reduce using rule 39 (CTLformula -> PFALSE .)
    RBRACK          reduce using rule 39 (CTLformula -> PFALSE .)


state 27

    (40) CTLformula -> NOT . CTLformula
    (34) CTLformula -> . CTLformula AND CTLformula
    (35) CTLformula -> . CTLformula OR CTLformula
    (36) CTLformula -> . CTLformula IMPL CTLformula
    (37) CTLformula -> . CTLformula EQVI CTLformula
    (38) CTLformula -> . PTRUE
    (39) CTLformula -> . PFALSE
    (40) CTLformula -> . NOT CTLformula
    (41) CTLformula -> . atom
    (42) CTLformula -> . LPAREN CTLformula RPAREN
    (43) CTLformula -> . EX CTLformula
    (44) CTLformula -> . EG CTLformula
    (45) CTLformula -> . E LBRACK CTLformula U CTLformula RBRACK
    (46) CTLformula -> . EF CTLformula
    (47) CTLformula -> . AX CTLformula
    (48) CTLformula -> . AG CTLformula
    (49) CTLformula -> . A LBRACK CTLformula U CTLformula RBRACK
    (50) CTLformula -> . AF CTLformula
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    PTRUE           shift and go to state 25
    PFALSE          shift and go to state 26
    NOT             shift and go to state 27
    LPAREN          shift and go to state 29
    EX              shift and go to state 30
    EG              shift and go to state 31
    E               shift and go to state 32
    EF              shift and go to state 33
    AX              shift and go to state 34
    AG              shift and go to state 35
    A               shift and go to state 36
    AF              shift and go to state 37
    ID              shift and go to state 14

    CTLformula                     shift and go to state 64
    atom                           shift and go to state 28

state 28

    (41) CTLformula -> atom .

    SEMICOLON       reduce using rule 41 (CTLformula -> atom .)
    AND             reduce using rule 41 (CTLformula -> atom .)
    OR              reduce using rule 41 (CTLformula -> atom .)
    IMPL            reduce using rule 41 (CTLformula -> atom .)
    EQVI            reduce using rule 41 (CTLformula -> atom .)
    RPAREN          reduce using rule 41 (CTLformula -> atom .)
    U               reduce using rule 41 (CTLformula -> atom .)
    RBRACK          reduce using rule 41 (CTLformula -> atom .)


state 29

    (42) CTLformula -> LPAREN . CTLformula RPAREN
    (34) CTLformula -> . CTLformula AND CTLformula
    (35) CTLformula -> . CTLformula OR CTLformula
    (36) CTLformula -> . CTLformula IMPL CTLformula
    (37) CTLformula -> . CTLformula EQVI CTLformula
    (38) CTLformula -> . PTRUE
    (39) CTLformula -> . PFALSE
    (40) CTLformula -> . NOT CTLformula
    (41) CTLformula -> . atom
    (42) CTLformula -> . LPAREN CTLformula RPAREN
    (43) CTLformula -> . EX CTLformula
    (44) CTLformula -> . EG CTLformula
    (45) CTLformula -> . E LBRACK CTLformula U CTLformula RBRACK
    (46) CTLformula -> . EF CTLformula
    (47) CTLformula -> . AX CTLformula
    (48) CTLformula -> . AG CTLformula
    (49) CTLformula -> . A LBRACK CTLformula U CTLformula RBRACK
    (50) CTLformula -> . AF CTLformula
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    PTRUE           shift and go to state 25
    PFALSE          shift and go to state 26
    NOT             shift and go to state 27
    LPAREN          shift and go to state 29
    EX              shift and go to state 30
    EG              shift and go to state 31
    E               shift and go to state 32
    EF              shift and go to state 33
    AX              shift and go to state 34
    AG              shift and go to state 35
    A               shift and go to state 36
    AF              shift and go to state 37
    ID              shift and go to state 14

    CTLformula                     shift and go to state 65
    atom                           shift and go to state 28

state 30

    (43) CTLformula -> EX . CTLformula
    (34) CTLformula -> . CTLformula AND CTLformula
    (35) CTLformula -> . CTLformula OR CTLformula
    (36) CTLformula -> . CTLformula IMPL CTLformula
    (37) CTLformula -> . CTLformula EQVI CTLformula
    (38) CTLformula -> . PTRUE
    (39) CTLformula -> . PFALSE
    (40) CTLformula -> . NOT CTLformula
    (41) CTLformula -> . atom
    (42) CTLformula -> . LPAREN CTLformula RPAREN
    (43) CTLformula -> . EX CTLformula
    (44) CTLformula -> . EG CTLformula
    (45) CTLformula -> . E LBRACK CTLformula U CTLformula RBRACK
    (46) CTLformula -> . EF CTLformula
    (47) CTLformula -> . AX CTLformula
    (48) CTLformula -> . AG CTLformula
    (49) CTLformula -> . A LBRACK CTLformula U CTLformula RBRACK
    (50) CTLformula -> . AF CTLformula
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    PTRUE           shift and go to state 25
    PFALSE          shift and go to state 26
    NOT             shift and go to state 27
    LPAREN          shift and go to state 29
    EX              shift and go to state 30
    EG              shift and go to state 31
    E               shift and go to state 32
    EF              shift and go to state 33
    AX              shift and go to state 34
    AG              shift and go to state 35
    A               shift and go to state 36
    AF              shift and go to state 37
    ID              shift and go to state 14

    CTLformula                     shift and go to state 66
    atom                           shift and go to state 28

state 31

    (44) CTLformula -> EG . CTLformula
    (34) CTLformula -> . CTLformula AND CTLformula
    (35) CTLformula -> . CTLformula OR CTLformula
    (36) CTLformula -> . CTLformula IMPL CTLformula
    (37) CTLformula -> . CTLformula EQVI CTLformula
    (38) CTLformula -> . PTRUE
    (39) CTLformula -> . PFALSE
    (40) CTLformula -> . NOT CTLformula
    (41) CTLformula -> . atom
    (42) CTLformula -> . LPAREN CTLformula RPAREN
    (43) CTLformula -> . EX CTLformula
    (44) CTLformula -> . EG CTLformula
    (45) CTLformula -> . E LBRACK CTLformula U CTLformula RBRACK
    (46) CTLformula -> . EF CTLformula
    (47) CTLformula -> . AX CTLformula
    (48) CTLformula -> . AG CTLformula
    (49) CTLformula -> . A LBRACK CTLformula U CTLformula RBRACK
    (50) CTLformula -> . AF CTLformula
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    PTRUE           shift and go to state 25
    PFALSE          shift and go to state 26
    NOT             shift and go to state 27
    LPAREN          shift and go to state 29
    EX              shift and go to state 30
    EG              shift and go to state 31
    E               shift and go to state 32
    EF              shift and go to state 33
    AX              shift and go to state 34
    AG              shift and go to state 35
    A               shift and go to state 36
    AF              shift and go to state 37
    ID              shift and go to state 14

    CTLformula                     shift and go to state 67
    atom                           shift and go to state 28

state 32

    (45) CTLformula -> E . LBRACK CTLformula U CTLformula RBRACK

    LBRACK          shift and go to state 68


state 33

    (46) CTLformula -> EF . CTLformula
    (34) CTLformula -> . CTLformula AND CTLformula
    (35) CTLformula -> . CTLformula OR CTLformula
    (36) CTLformula -> . CTLformula IMPL CTLformula
    (37) CTLformula -> . CTLformula EQVI CTLformula
    (38) CTLformula -> . PTRUE
    (39) CTLformula -> . PFALSE
    (40) CTLformula -> . NOT CTLformula
    (41) CTLformula -> . atom
    (42) CTLformula -> . LPAREN CTLformula RPAREN
    (43) CTLformula -> . EX CTLformula
    (44) CTLformula -> . EG CTLformula
    (45) CTLformula -> . E LBRACK CTLformula U CTLformula RBRACK
    (46) CTLformula -> . EF CTLformula
    (47) CTLformula -> . AX CTLformula
    (48) CTLformula -> . AG CTLformula
    (49) CTLformula -> . A LBRACK CTLformula U CTLformula RBRACK
    (50) CTLformula -> . AF CTLformula
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    PTRUE           shift and go to state 25
    PFALSE          shift and go to state 26
    NOT             shift and go to state 27
    LPAREN          shift and go to state 29
    EX              shift and go to state 30
    EG              shift and go to state 31
    E               shift and go to state 32
    EF              shift and go to state 33
    AX              shift and go to state 34
    AG              shift and go to state 35
    A               shift and go to state 36
    AF              shift and go to state 37
    ID              shift and go to state 14

    CTLformula                     shift and go to state 69
    atom                           shift and go to state 28

state 34

    (47) CTLformula -> AX . CTLformula
    (34) CTLformula -> . CTLformula AND CTLformula
    (35) CTLformula -> . CTLformula OR CTLformula
    (36) CTLformula -> . CTLformula IMPL CTLformula
    (37) CTLformula -> . CTLformula EQVI CTLformula
    (38) CTLformula -> . PTRUE
    (39) CTLformula -> . PFALSE
    (40) CTLformula -> . NOT CTLformula
    (41) CTLformula -> . atom
    (42) CTLformula -> . LPAREN CTLformula RPAREN
    (43) CTLformula -> . EX CTLformula
    (44) CTLformula -> . EG CTLformula
    (45) CTLformula -> . E LBRACK CTLformula U CTLformula RBRACK
    (46) CTLformula -> . EF CTLformula
    (47) CTLformula -> . AX CTLformula
    (48) CTLformula -> . AG CTLformula
    (49) CTLformula -> . A LBRACK CTLformula U CTLformula RBRACK
    (50) CTLformula -> . AF CTLformula
    (66) atom -> . ID
    (67) atom -> . ID LPAREN termlist RPAREN

    PTRUE           shift and go to state 25
    PFALSE          shift and go to state 26
    NOT             shift and go to state 27
    LPAREN          shift and go to state 29
    EX              shift and go to state 30
    EG              shift and go to state 31
    E               shift and go to state 32
    EF              shift and go to state 33
    AX              shift and go to state 34
    AG              shift and go to state 35
    A               shift and go to state 36
    AF              shift and go to state 37
    ID              shift and go to state 14

    CTLformula                     shift and go to state 70
    atom                           shift and go to state 28

state 35
